Add ability to unmute ads or mute a show/movie.
It will still mute when a commercial break comes up and unmute when the show comes back on, it's just that it gives you the possibility to listen to an ad if it seems interesting. (previously, it would re-mute in the next second)

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
 	"name": "MuteHuluAds",
-	"version": "1.0",
+	"version": "1.1",
 	"manifest_version": 2,
-	"description": "Automatically mutes ads while you watch videos on Hulu.",
+	"description": "Automatically mutes ads while you watch videos on Hulu. (and restores the volume when content comes back)",
 	"content_scripts": [
 		{
 			"matches": ["http://www.hulu.com/*"],
