--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,11 @@
 	"name": "Interhulude",
 	"version": "1.3",
 	"manifest_version": 2,
-	"description": "Automatically mutes and hides  ads while you watch videos on Hulu. (and restores the volume when content comes back)",
+	"description": "Automatically mutes and hides ads while you watch videos on Hulu. (and restores the volume when the content comes back)",
 	"icons": {
-		"16": "logo-16x16.png",
-		"48": "logo-48x48.png",
-		"128": "logo-128x128.png"
+		"16": "images/logo-16x16.png",
+		"48": "images/logo-48x48.png",
+		"128": "images/logo-128x128.png"
 	},
 	"content_scripts": [
 		{
