--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-	"name": "Interhulude",
-	"version": "1.3.1",
+	"name": "No Hulu Ads",
+	"version": "1.3.2",
 	"manifest_version": 2,
 	"description": "Automatically mutes and hides ads while you watch videos on Hulu. (and restores the volume when the content comes back)",
 	"icons": {
@@ -11,8 +11,8 @@
 	"content_scripts": [
 		{
 			"matches": ["http://www.hulu.com/*"],
-			"js": ["interhulude.js"],
-			"css": ["interhulude.css"]
+			"js": ["nohuluads.js"],
+			"css": ["nohuluads.css"]
 		}
 	]
 }
