--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
 	"name": "No Hulu Ads",
-	"version": "1.3.3",
+	"version": "1.3.4",
 	"manifest_version": 2,
 	"description": "Automatically mutes and hides ads while you watch videos on Hulu. (and restores the volume when the content comes back)",
 	"icons": {
@@ -8,11 +8,20 @@
 		"48": "images/logo-48x48.png",
 		"128": "images/logo-128x128.png"
 	},
+	"background": {
+		"scripts": ["background.js"]
+	},
 	"content_scripts": [
 		{
 			"matches": ["http://www.hulu.com/*"],
 			"js": ["nohuluads.js"],
 			"css": ["nohuluads.css"]
 		}
+	],
+	"permissions": [
+		"notifications"
+	],
+	"web_accessible_resources": [
+		"images/logo-48x48.png"
 	]
 }
