Add click on notification to go to page and start video
Works with Mountain Lion notifications as well as Lion's. (which are "non-native", compared to Mountain Lion's)

--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,8 @@
 		}
 	],
 	"permissions": [
-		"notifications"
+		"notifications",
+		"tabs"
 	],
 	"web_accessible_resources": [
 		"images/logo-48x48.png"
